--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -3,17 +3,21 @@
         <h3 class="panel-title">{{rental.title}}</h3>
     </div>
     <div class="panel-body">
-        <p>Default Rent: {{rental.defaultRent}} {{rental.rentPaymentPeriod}}</p>
-        <p>City: {{rental.city}}</p>
-        <p>Bedrooms: {{rental.bedrooms}}</p>
-        <p>Landlord: {{rental.landlord.name}}</p>
-        <p>Property Type: {{rental.propertyType.name}}</p>
-        <p>Rental State: {{rental.rentalState.name}}</p>
-      {{#if isImageShowing }}
-          <button class="btn btn-danger" {{action "imageHide"}}>Hide image</button>
-          <p><img class='rental-image' src={{rental.image}} alt={{rental.type}} width="500px"></p>
-      {{else}}
-          <button class="btn btn-success" {{action "imageShow"}}>Show image</button>
-      {{/if}}
+        <div class="col-md-8">
+          <p>Default Rent: {{rental.defaultRent}} {{rental.rentPaymentPeriod}}</p>
+          <p>City: {{rental.city}}</p>
+          <p>Bedrooms: {{rental.bedrooms}}</p>
+          <p>Landlord: {{rental.landlord.name}}</p>
+          <p>Property Type: {{rental.propertyType.name}}</p>
+          <p>Rental State: {{rental.rentalState.name}}</p>
+        </div>
+        <div class="col-md-4">
+          {{#if isImageShowing }}
+              <button class="btn btn-danger" {{action "imageHide"}}>Hide image</button>
+              <p><img class='rental-image' src={{rental.image}} alt={{rental.type}} width="500px"></p>
+          {{else}}
+              <button class="btn btn-success" {{action "imageShow"}}>Show image</button>
+          {{/if}}
+        </div>
     </div>
 </div>
