Component for landlord

--- a/app/templates/landlord.hbs
+++ b/app/templates/landlord.hbs
@@ -1,5 +1,3 @@
-{{#each model as |landlord|}}
-  <h2>{{landlord.name}}</h2>
-  <p>Address: {{landlord.address}}</p>
-  <p>Telephone: {{landlord.telephone}}</p>
+{{#each model as |landlordListing|}}
+  {{landlord-listing landlord=landlordListing}}
 {{/each}}
