--- a/app/templates/rental.hbs
+++ b/app/templates/rental.hbs
@@ -1,3 +1,3 @@
-{{#each model as |rentalUnit|}}
-  {{rental-listing rental=rentalUnit}}
+{{#each model as |rentalListing|}}
+  {{rental-listing rental=rentalListing}}
 {{/each}}
