--- a/app/templates/components/landlord-listing.hbs
+++ b/app/templates/components/landlord-listing.hbs
@@ -7,5 +7,6 @@
     <div class="panel-body">
         <p>Address: {{landlord.address}}</p>
         <p>Telephone: {{landlord.telephone}}</p>
+      {{#link-to 'landlords.show' landlord}}More details{{/link-to}}
     </div>
 </div>
