--- a/app/templates/components/nav-bar.hbs
+++ b/app/templates/components/nav-bar.hbs
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li>{{#link-to "rental"}}Rentals{{/link-to}}</li>
-        <li>{{#link-to "landlord"}}Landlords{{/link-to}}</li>
+        <li>{{#link-to "rentals"}}Rentals{{/link-to}}</li>
+        <li>{{#link-to "landlords"}}Landlords{{/link-to}}</li>
 		    <li>{{#link-to "about"}}About{{/link-to}}</li>
 		    <li>{{#link-to "contact"}}Contact{{/link-to}}</li>
       </ul>
