--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -7,11 +7,21 @@
     </div>
     <div class="panel-body">
         <div class="col-md-6">
+            <div class="row">
+
+            </div>
             <div class="col-md-6">
-                <p>
-                  <span class="rental-property-type">{{rental.propertyType.name}}</span> /
-                  <span class="rental-bedrooms">{{rental.bedrooms}} bed</span>
-                </p>
+                <div class="row">
+                    <p>
+                      <span class="rental-property-type">{{rental.propertyType.name}}</span> /
+                      <span class="rental-bedrooms">{{rental.bedrooms}} bed</span>
+                  </p>
+                </div>
+                <div class="row">
+                  <p>{{#link-to 'landlords.show' rental.landlord}}{{rental.landlord.name}}{{/link-to}}</p>
+                  <p>{{#link-to 'rentals.show' rental}}More details{{/link-to}}</p>
+                </div>
+
             </div>
             <div class="col-md-6">
               <p>
