--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,3 +1,5 @@
+<h2>Contact us</h2>
+
 <p>Super Rentals Representatives would love to help you choose a destination or answer
 any questions you may have.</p>
 
@@ -12,5 +14,3 @@ any questions you may have.</p>
 <p>(503)555-1212</p>
 
 <p>superrentalsrep@superrentals.com</p>
-
-{{#link-to "about"}}About{{/link-to}}
